--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="selected">#8BC34A</color>
+    <color name="selected_range">#E4B7DC8C</color>
+    <color name="disable">#A2A0A5</color>
+    <color name="active">#3F51B5</color>
+    <color name="warning">#FFFFFFFF</color>
 </resources>
