--- a/app/src/main/res/layout/board_ten.xml
+++ b/app/src/main/res/layout/board_ten.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/board_ten"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:padding="2dp">
+    android:background="#536DFE"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/box1"
