--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="warning">#FFFFFFFF</color>
     <color name="button">#6750A3</color>
     <color name="background">#6A1B9A</color>
+    <color name="button_text">#FAF8FB</color>
 </resources>
